part1/exer1.09/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong
  ports:
    - protocol: TCP
      port: 2347
      targetPort: 8080
